--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
+<script>
+    $(document).ready(function() {
+        // Проверяем авторизацию
+        if (localStorage.getItem('isLoggedIn') === 'true') {
+            // Меняем "Вход" на "Профиль"
+            $('.auth-link').html('<a href="profile.html"><i class="fas fa-user"></i> Профиль</a>');
+        }
+    });
+</script>
 <body>
     <header>
         <div class="container">
