--- a/login.html
+++ b/login.html
@@ -6,57 +6,7 @@
     <title>Вход | Районные Вести</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .auth-container {
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 30px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-        .auth-btn {
-            width: 100%;
-            padding: 12px;
-            background: #3498db;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-        .auth-btn:hover {
-            background: #2980b9;
-        }
-        .auth-footer {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .error-message {
-            color: #e74c3c;
-            margin-bottom: 15px;
-            padding: 10px;
-            background: #fadbd8;
-            border-radius: 4px;
-            display: none;
-        }
-    </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body class="auth-page">
     <div class="auth-container">
@@ -84,7 +34,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#loginForm').submit(function(e) {
@@ -92,16 +41,15 @@
                 
                 const username = $('#username').val();
                 const password = $('#password').val();
-                const errorElement = $('#login-error');
                 
-                // Проверка учетных данных
                 if (username === "admin" && password === "malagastyle") {
-                    // Успешный вход
+                    // Сохраняем данные пользователя
                     localStorage.setItem('isLoggedIn', 'true');
+                    localStorage.setItem('username', username);
+                    // Перенаправляем на главную
                     window.location.href = 'index.html';
                 } else {
-                    // Ошибка входа
-                    errorElement.text('Неверный логин или пароль').show();
+                    $('#login-error').text('Неверный логин или пароль').show();
                 }
             });
         });
