--- a/index.html
+++ b/index.html
@@ -5,26 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Районные Вести</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css ">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js "></script>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1><i class="fas fa-newspaper"></i> Районные Вести</h1>
-                <p>Самые свежие новости нашего района</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#" class="active">Главная</a></li>
-                    <li><a href="about.html">О районе</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                    <li class="auth-link"><a href="login.html">Вход</a></li>
-                </ul>
-            </nav>
+<script>
+    // Устанавливаем флаг авторизации из URL параметра
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.has('login') && urlParams.get('login') === 'success') {
+        localStorage.setItem('isLoggedIn', 'true');
+    }
+
+    // Проверяем авторизацию при загрузке
+    $(document).ready(function() {
+        if (localStorage.getItem('isLoggedIn') === 'true') {
+            $('#login-btn').hide();
+            $('#profile-btn').show();
+        }
+    });
+</script>
+
+<header>
+    <div class="container">
+        <div class="logo">
+            <h1><i class="fas fa-newspaper"></i> Районные Вести</h1>
+            <p>Самые свежие новости нашего района</p>
         </div>
-    </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О районе</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+                <li id="auth-link">
+                    <a href="login.html" id="login-btn"><i class="fas fa-sign-in-alt"></i> Вход</a>
+                    <a href="profile.html" id="profile-btn" style="display:none;"><i class="fas fa-user"></i> Профиль</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
     <div class="hero">
         <div class="container">
